[package]
name = "ds2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pqc_dilithium = "0.2.0"
rand = "0.8.3"
rand_distr = "0.4.0"
sha2 = "0.10.8"
polynomial-ring = "0.5.0"
num-bigint = { version = "0.4.4", features = ["rand"] }
num-traits = "0.2.18"
ndarray = "0.15.3"
ndarray-rand = "0.14.0"
nalgebra = "0.32.3"
rayon = "1.8.1"
rustnomial = "0.3.2"
num-complex = "0.4.5"
rustfft = "6.2.0"
concrete-ntt = "0.1.2"

[dev-dependencies]
criterion = "0.5.1"

[[bin]]
name = "ds2"
path = "src/bin/ds2.rs"

[[bench]]
name = "benchmark_test"
harness = false